{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 258,
  "lineage": "6395b7cd-e833-b14e-6e47-c6929f36c23d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:security-group/sg-05610bca68b0b622a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05610bca68b0b622a",
            "ingress": [],
            "name": "ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "817463812436",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:security-group/sg-08b5e8af9763d4bd8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b5e8af9763d4bd8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05610bca68b0b622a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-aurora-sg",
            "name_prefix": "",
            "owner_id": "817463812436",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_tasks_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:network-acl/acl-0475639d60102154f",
            "default_network_acl_id": "acl-0475639d60102154f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0475639d60102154f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "817463812436",
            "subnet_ids": [
              "subnet-0228bb9889ecbe673",
              "subnet-022f7bd19afde6065",
              "subnet-0288e2ca0db12dab5",
              "subnet-03be17d7ee50b1c97",
              "subnet-0528d5c2d2e1b70a8",
              "subnet-054bd98526bfe039f",
              "subnet-07e15359ae018a4aa",
              "subnet-0994b396805ae8f35",
              "subnet-0a45e7187f9d35cdf"
            ],
            "tags": {
              "Name": "app-vpc-default"
            },
            "tags_all": {
              "Name": "app-vpc-default"
            },
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:route-table/rtb-07b44c542fb1a8f3d",
            "default_route_table_id": "rtb-07b44c542fb1a8f3d",
            "id": "rtb-07b44c542fb1a8f3d",
            "owner_id": "817463812436",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app-vpc-default"
            },
            "tags_all": {
              "Name": "app-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:security-group/sg-08cdbc8b5f481abf3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08cdbc8b5f481abf3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "817463812436",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-vpc-default"
            },
            "tags_all": {
              "Name": "app-vpc-default"
            },
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b5ce50544db4c37",
            "arn": "arn:aws:ec2:us-east-1:817463812436:elastic-ip/eipalloc-02b5ce50544db4c37",
            "association_id": "eipassoc-0cc68ea5abab1d247",
            "domain": "vpc",
            "id": "eipalloc-02b5ce50544db4c37",
            "network_border_group": "us-east-1",
            "network_interface": "eni-039b7604d6d26a82c",
            "private_dns": "ip-10-0-101-77.ec2.internal",
            "private_ip": "10.0.101.77",
            "public_dns": "ec2-107-23-90-22.compute-1.amazonaws.com",
            "public_ip": "107.23.90.22",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "app-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b5888e916794849",
            "arn": "arn:aws:ec2:us-east-1:817463812436:elastic-ip/eipalloc-01b5888e916794849",
            "association_id": "eipassoc-0ecaa39d78fceaf0b",
            "domain": "vpc",
            "id": "eipalloc-01b5888e916794849",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bb318bea0904261c",
            "private_dns": "ip-10-0-102-189.ec2.internal",
            "private_ip": "10.0.102.189",
            "public_dns": "ec2-34-198-95-227.compute-1.amazonaws.com",
            "public_ip": "34.198.95.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "app-vpc-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b370e8d4b482773",
            "arn": "arn:aws:ec2:us-east-1:817463812436:elastic-ip/eipalloc-05b370e8d4b482773",
            "association_id": "eipassoc-09885f2b2e9bc68d4",
            "domain": "vpc",
            "id": "eipalloc-05b370e8d4b482773",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00b36a2fca1c69753",
            "private_dns": "ip-10-0-103-219.ec2.internal",
            "private_ip": "10.0.103.219",
            "public_dns": "ec2-98-94-215-244.compute-1.amazonaws.com",
            "public_ip": "98.94.215.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app-vpc-us-east-1c"
            },
            "tags_all": {
              "Name": "app-vpc-us-east-1c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:internet-gateway/igw-09899f589ec9a6cf6",
            "id": "igw-09899f589ec9a6cf6",
            "owner_id": "817463812436",
            "tags": {
              "Name": "app-vpc"
            },
            "tags_all": {
              "Name": "app-vpc"
            },
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b5ce50544db4c37",
            "association_id": "eipassoc-0cc68ea5abab1d247",
            "connectivity_type": "public",
            "id": "nat-0386c697cf58f6553",
            "network_interface_id": "eni-039b7604d6d26a82c",
            "private_ip": "10.0.101.77",
            "public_ip": "107.23.90.22",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03be17d7ee50b1c97",
            "tags": {
              "Name": "app-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "app-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b5888e916794849",
            "association_id": "eipassoc-0ecaa39d78fceaf0b",
            "connectivity_type": "public",
            "id": "nat-0d632091705e4731d",
            "network_interface_id": "eni-0bb318bea0904261c",
            "private_ip": "10.0.102.189",
            "public_ip": "34.198.95.227",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0994b396805ae8f35",
            "tags": {
              "Name": "app-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "app-vpc-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b370e8d4b482773",
            "association_id": "eipassoc-09885f2b2e9bc68d4",
            "connectivity_type": "public",
            "id": "nat-0bb2c31c9fd9a3c55",
            "network_interface_id": "eni-00b36a2fca1c69753",
            "private_ip": "10.0.103.219",
            "public_ip": "98.94.215.244",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0288e2ca0db12dab5",
            "tags": {
              "Name": "app-vpc-us-east-1c"
            },
            "tags_all": {
              "Name": "app-vpc-us-east-1c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-013981052e27f2c7a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0386c697cf58f6553",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013981052e27f2c7a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d13cfb2f7b46c76e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d632091705e4731d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d13cfb2f7b46c76e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-082adaba00e360ca81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bb2c31c9fd9a3c55",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-082adaba00e360ca8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09899f589ec9a6cf6",
            "id": "r-rtb-0e2c2747e452310001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e2c2747e45231000",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:route-table/rtb-013981052e27f2c7a",
            "id": "rtb-013981052e27f2c7a",
            "owner_id": "817463812436",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0386c697cf58f6553",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "app-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:route-table/rtb-0d13cfb2f7b46c76e",
            "id": "rtb-0d13cfb2f7b46c76e",
            "owner_id": "817463812436",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d632091705e4731d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "app-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:route-table/rtb-082adaba00e360ca8",
            "id": "rtb-082adaba00e360ca8",
            "owner_id": "817463812436",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bb2c31c9fd9a3c55",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "app-vpc-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:route-table/rtb-0e2c2747e45231000",
            "id": "rtb-0e2c2747e45231000",
            "owner_id": "817463812436",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09899f589ec9a6cf6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-vpc-public"
            },
            "tags_all": {
              "Name": "app-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016f096430295356c",
            "route_table_id": "rtb-013981052e27f2c7a",
            "subnet_id": "subnet-0a45e7187f9d35cdf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1cfa8efcb234b72",
            "route_table_id": "rtb-0d13cfb2f7b46c76e",
            "subnet_id": "subnet-0528d5c2d2e1b70a8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1a7937c6e4493af",
            "route_table_id": "rtb-082adaba00e360ca8",
            "subnet_id": "subnet-022f7bd19afde6065"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0315a6cce561d770f",
            "route_table_id": "rtb-013981052e27f2c7a",
            "subnet_id": "subnet-0228bb9889ecbe673"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb1cae5ff6e37900",
            "route_table_id": "rtb-0d13cfb2f7b46c76e",
            "subnet_id": "subnet-07e15359ae018a4aa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087cb35a609a1be11",
            "route_table_id": "rtb-082adaba00e360ca8",
            "subnet_id": "subnet-054bd98526bfe039f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4eca0ec8888df6c",
            "route_table_id": "rtb-0e2c2747e45231000",
            "subnet_id": "subnet-03be17d7ee50b1c97"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a55ef9f62a888dd",
            "route_table_id": "rtb-0e2c2747e45231000",
            "subnet_id": "subnet-0994b396805ae8f35"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d08abc097d727cc",
            "route_table_id": "rtb-0e2c2747e45231000",
            "subnet_id": "subnet-0288e2ca0db12dab5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:subnet/subnet-0a45e7187f9d35cdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a45e7187f9d35cdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817463812436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-db-us-east-1a"
            },
            "tags_all": {
              "Name": "app-vpc-db-us-east-1a"
            },
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:subnet/subnet-0528d5c2d2e1b70a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0528d5c2d2e1b70a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817463812436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-db-us-east-1b"
            },
            "tags_all": {
              "Name": "app-vpc-db-us-east-1b"
            },
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:subnet/subnet-022f7bd19afde6065",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.203.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022f7bd19afde6065",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817463812436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-db-us-east-1c"
            },
            "tags_all": {
              "Name": "app-vpc-db-us-east-1c"
            },
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:subnet/subnet-0228bb9889ecbe673",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0228bb9889ecbe673",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817463812436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "app-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:subnet/subnet-07e15359ae018a4aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e15359ae018a4aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817463812436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "app-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:subnet/subnet-054bd98526bfe039f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054bd98526bfe039f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817463812436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "app-vpc-private-us-east-1c"
            },
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:subnet/subnet-03be17d7ee50b1c97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03be17d7ee50b1c97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817463812436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "app-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:subnet/subnet-0994b396805ae8f35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0994b396805ae8f35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817463812436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "app-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:subnet/subnet-0288e2ca0db12dab5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0288e2ca0db12dab5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817463812436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "app-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-0e10c6f4b2f8714c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817463812436:vpc/vpc-0e10c6f4b2f8714c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0475639d60102154f",
            "default_route_table_id": "rtb-07b44c542fb1a8f3d",
            "default_security_group_id": "sg-08cdbc8b5f481abf3",
            "dhcp_options_id": "dopt-01e57aa1dae61af96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e10c6f4b2f8714c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b44c542fb1a8f3d",
            "owner_id": "817463812436",
            "tags": {
              "Name": "app-vpc"
            },
            "tags_all": {
              "Name": "app-vpc"
            }
          }
        }
      ]
    }
  ]
}